# PrivateIrisByCKKS

./: README.md
conda/: iris-ckks.yml
db-generator/: CMakeLists.txt  README.md  worldcoin-db-generation.cpp
db-generator/include/: worldcoin-db.hpp
db-generator/include/HEaaN/: Bootstrapper.hpp  Ciphertext.hpp  Context.hpp  Decryptor.hpp  EnDecoder.hpp  Encryptor.hpp  ExactBaseConverter.hpp  HEaaN.hpp  HomEvaluator.hpp  MatrixMultiplier.hpp  ParameterPreset.hpp  Plaintext.hpp  RealHEaaNConverter.hpp  RealHEaaNDecryptor.hpp  RealHEaaNEncryptor.hpp  RealHEaaNPacker.hpp  RingPacker.hpp  RingSwitchKey.hpp
db-generator/include/hem/: BaseConverterU64U8Square.hpp  Cleaner.hpp  CoeffEncryptor.hpp  DecryptManager.hpp  EvaluationResource.hpp  ExactBaseConverterU64U8.cuh  ExactBaseConverterU64U8.hpp  HEDataBase.hpp  HEDataBaseManager.hpp  Int8MatrixEncryptor.hpp  Int8SquareMatrixEncryptor.hpp  LevelSwitcher.hpp  MatrixMultiplier.hpp  MatrixMultiplierInt8.hpp  MatrixMultiplierInt8Square.hpp  OutsourcedResource.hpp  Version.hpp
db-generator/include/hem/utils/: Arith.hpp  ParameterUtils.hpp
db-generator/lib/cmake/HEaaN/: HEaaNConfig.cmake  HEaaNTargets-release.cmake  HEaaNTargets.cmake
db-generator/lib/cmake/hem/: hemConfig.cmake  hemTargets-release.cmake  hemTargets.cmake
iris-ckks/: CMakeLists.txt  README.md  coreCircuit.cpp  postProcess.cpp  preProcess.cpp
iris-ckks/include/: Worldcoin.hpp
